# scrapee

./: .gitignore  Cargo.toml  Makefile.toml
scrapee-api/: Cargo.toml  Makefile.toml
scrapee-api/examples/: test-db.rs  test-run.rs
scrapee-api/migrations/: 20221124094510_init-schema.sql
scrapee-api/sea_orm_generated/: field.rs  job.rs  mod.rs  page.rs  page_content.rs  prelude.rs  site.rs
scrapee-api/src/: app_state.rs  collector.rs  error.rs  lib.rs  main.rs  message.rs  site.rs  tauri_plugin.rs
scrapee-api/src/collector/: mod.rs  site.rs
scrapee-api/src/dao/: mod.rs  seed_data.rs
scrapee-api/src/dao/entities/: field.rs  job.rs  mod.rs  page.rs  page_content.rs  page_content_archive.rs  prelude.rs  reader.rs  reader_block.rs  site.rs
scrapee-api/src/job/: manager.rs  mod.rs
scrapee-api/src/reader/: mod.rs
scrapee-api/src/server/: mod.rs  requests.rs  responses.rs
scrapee-ui/: .eslintrc  .prettierrc  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
scrapee-ui/src/: App.tsx  MainLayout.tsx  main.tsx  types.d.ts
scrapee-ui/src-tauri/: Cargo.toml  Makefile.toml  tauri.conf.json
scrapee-ui/src-tauri/src/: main.rs
scrapee-ui/src/atoms/: nav.ts  reader.ts  site.ts
scrapee-ui/src/components/: Home.tsx  MainTab.tsx  PageContent.tsx  PageDetail.tsx  PageList.tsx  PageTabs.tsx  TabReader.tsx  TabSite.tsx  TabView.tsx  components
scrapee-ui/src/forms/: page.ts
scrapee-ui/src/server-types/: Field.ts  Job.ts  JobKind.ts  JobResponse.ts  JobStatus.ts  Page.ts  PageContent.ts  PageContentsResponse.ts  PageResponse.ts  PagesResponse.ts  Reader.ts  ReaderBlock.ts  ReaderBlockConfig.ts  ReaderBlockResponse.ts  ReaderResponse.ts  ReadersResponse.ts  Site.ts  SiteResponse.ts  SitesResponse.ts  index.ts
(+7 files in other folders)
