[package]
name = "scrapee-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wax = { version = "0.5" }
regex = "1.7"
chrono = "0.4"

tokio = { version = "1.1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = { version = "0.3", features = ["executor"] }

libxml = "0.3"
url = { version = "2.3.1", features = ["serde"] }
reqwest = "0.11"
thiserror = "1.0"

async-trait = "0.1"
env_logger = "0.9"
log = { version = "0.4", features = ["max_level_debug", "release_max_level_info"] }

tauri = { version = "1.1", default-features = false, features = [] }

[dependencies.sqlx]
version = "0.6.2"
features = ["migrate"]

[dependencies.sea-orm]
version = "0.10.3"
features = ["sqlx-sqlite", "runtime-tokio-native-tls", "macros", "with-chrono"]
default-features = false

[[example]]
name = "test-run"

[[example]]
name = "test-db"